<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/app_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_title2"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/go_search"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginBottom="143dp"
        android:text="@string/go_search"
        app:layout_constraintBottom_toTopOf="@+id/editor_name"
        app:layout_constraintEnd_toStartOf="@+id/go_revised"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/go_revised"
        android:layout_width="120dp"
        android:layout_height="90dp"
        android:layout_marginBottom="143dp"
        android:text="@string/go_revised"
        app:layout_constraintBottom_toTopOf="@+id/editor_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/go_search" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="140dp"
        android:layout_height="120dp"
        android:layout_marginTop="25dp"
        android:src="@android:mipmap/sym_def_app_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title2" />

    <TextView
        android:id="@+id/editor_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/editor_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>