<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search_related.Booking">

    <Button
        android:id="@+id/backtoHome"
        android:layout_width="46dp"
        android:layout_height="28dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:text="@string/backtohome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arrange_tripname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="40dp"
        android:text="@string/arrange_tipname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_title" />

    <TextView
        android:id="@+id/arrange_inputtripname"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/arrange_tripname"
        app:layout_constraintTop_toBottomOf="@+id/arrange_title" />

    <TextView
        android:id="@+id/arrange_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="19dp"
        android:text="@string/arrange_tripid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputtripname" />

    <TextView
        android:id="@+id/arrange_inputid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="129dp"
        android:layout_marginRight="129dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrange_id"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputtripname" />

    <TextView
        android:id="@+id/arrange_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="176dp"
        android:layout_marginRight="176dp"
        android:text="@string/arrange_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/arrange_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="25dp"
        android:text="@string/arrange_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_id" />

    <EditText
        android:id="@+id/arrange_inputusername"
        android:layout_width="104dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="86dp"
        android:layout_marginRight="86dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/arrange_username"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputid" />

    <TextView
        android:id="@+id/arrange_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="18dp"
        android:text="@string/arrange_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputusername" />

    <EditText
        android:id="@+id/arrange_inputphone"
        android:layout_width="125dp"
        android:layout_height="26dp"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        app:layout_constraintStart_toEndOf="@+id/arrange_phone"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputusername" />

    <TextView
        android:id="@+id/arrange_numadult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:text="@string/numOfAdult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputphone" />

    <TextView
        android:id="@+id/arrange_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="4dp"
        android:text="@string/total_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_numinfant" />

    <TextView
        android:id="@+id/arrange_numinfant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="12dp"
        android:text="@string/numOfInfant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_numchild" />

    <Spinner
        android:id="@+id/spinner_infant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toEndOf="@+id/arrange_numinfant"
        app:layout_constraintTop_toBottomOf="@+id/spinner_child" />

    <TextView
        android:id="@+id/arrange_numchild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/numOfChild"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_numadult" />

    <Button
        android:id="@+id/arrange_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/booked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_date" />

    <Spinner
        android:id="@+id/spinner_adult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toEndOf="@+id/arrange_numadult"
        app:layout_constraintTop_toBottomOf="@+id/arrange_inputphone" />

    <TextView
        android:id="@+id/arrange_date"
        android:layout_width="190dp"
        android:layout_height="18dp"
        android:layout_marginStart="102dp"
        android:layout_marginLeft="102dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrange_total_amount" />

    <Spinner
        android:id="@+id/spinner_child"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        app:layout_constraintStart_toEndOf="@+id/arrange_numchild"
        app:layout_constraintTop_toBottomOf="@+id/spinner_adult" />

    <TextView
        android:id="@+id/arrange_amount"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:text="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/arrange_total_amount"
        app:layout_constraintTop_toBottomOf="@+id/arrange_numinfant" />

</androidx.constraintlayout.widget.ConstraintLayout>